# sticker-bot

./: .gitignore  Cargo.toml  LICENSE  README.md  lottie_to_gif.sh  tgs_to_gif.sh
.github/workflows/: build.yml
src/: main.rs
