[package]
name = "sticker-bot"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
lto = true

[dependencies]
teloxide = { version = "0", features = ["rustls"] }
log = "0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process"] }
image = "0"
anyhow = "1"
webp = "0"
bytes = "1"
tempfile = "3"
pretty_env_logger = { git = "https://github.com/karin0/pretty-env-logger.git" }
